--- a/#source/header.html
+++ b/#source/header.html
@@ -1,5 +1,5 @@
 <header class="header">
-	<div class="container">
+	<div class="header-container">
 		<div class="header-top">
 			<div class="header-top__lang">
 				<a href="#" class="header-top__lang-item active">EN</a>
