--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 	<div class="wrapper">
 <header class="header">
-	<div class="container">
+	<div class="header-container">
 		<div class="header-top">
 			<div class="header-top__lang">
 				<a href="#" class="header-top__lang-item active">EN</a>
@@ -189,7 +189,7 @@
 								</div>
 								<div class="why-body__item">
 									<div class="why-body__image">
-										<img src="./img/why/icons/04.svg" alt="icon: flower" class="why-body__image-item">
+										<img src="../img/why/icons/04.svg" alt="icon: flower" class="why-body__image-item">
 									</div>
 									<div class="why-body__text">
 										<h3 class="why-body__title">fits any size and budget</h3>
