--- a/#source/footer.html
+++ b/#source/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-	<div class='container'>
+	<div class='footer-container'>
 		<div class="footer__row">
 			<div class="footer__copyright">© PrimeOne Catering 2014. <span>Terms & Conditions</span></div>
 			<a href="#" class="footer__logo">
