--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 			</section>
 		</main>	
 <footer class="footer">
-	<div class='container'>
+	<div class='footer-container'>
 		<div class="footer__row">
 			<div class="footer__copyright">© PrimeOne Catering 2014. <span>Terms & Conditions</span></div>
 			<a href="#" class="footer__logo">
