--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 								</div>
 								<div class="why-body__item">
 									<div class="why-body__image">
-										<img src="./img/why/icons/04.svg" alt="icon: flower" class="why-body__image-item">
+										<img src="../img/why/icons/04.svg" alt="icon: flower" class="why-body__image-item">
 									</div>
 									<div class="why-body__text">
 										<h3 class="why-body__title">fits any size and budget</h3>
@@ -215,7 +215,7 @@
 									</div>
 									<div class="contacts-top__text">45-35 #B 39th St, Sunnyside, NY 11104</div>
 								</a>
-								<a href="#" class="contacts-top__item">
+								<a href="tel:7187777777" class="contacts-top__item">
 									<div class="contacts-top__image">
 										<img src="./img/contacts/icons/02.svg" alt="" class="contacts-top__image-item">
 									</div>
@@ -223,7 +223,7 @@
 								</a>
 							</div>
 							<div class="contacts-top__column contacts-top__column--second">
-								<a href="#" class="contacts-top__item">
+								<a href="mailto:contact@primeone.com" class="contacts-top__item">
 									<div class="contacts-top__image">
 										<img src="./img/contacts/icons/03.svg" alt="" class="contacts-top__image-item">
 									</div>
