--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/custom.css">
-	<link rel="shortcut icon" href="favicon.ico">
+	<!--  <link rel="shortcut icon" href="favicon.ico"> /> -->
 	<!-- <meta name="robots" content="noindex, nofollow" /> -->
 	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
@@ -189,7 +189,7 @@
 								</div>
 								<div class="why-body__item">
 									<div class="why-body__image">
-										<img src="../img/why/icons/04.svg" alt="icon: flower" class="why-body__image-item">
+										<img src="./img/why/icons/04.svg" alt="icon: flower" class="why-body__image-item">
 									</div>
 									<div class="why-body__text">
 										<h3 class="why-body__title">fits any size and budget</h3>
